Update BWGVillagerTrades to use a Int2ObjectMap instead of a List of Pairs
Signed-off-by: Joseph T. McQuigg <J.T.McQuigg12@gmail.com>